# HelloGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  autocommit.py  exit_codes.h  gui.cpp  main.cpp  shader_loader.cpp  util.cpp
GLFW/: CMakeLists.txt  cmake_install.cmake
glad/: glad.c  glad.h
glad/include/glad/: gl.h  glad.c  glad.h  gles1.h  gles2.h  glsc2.h
glad/src/: gles1.c  gles2.c  glsc2.c
imgui/: imgui_impl_glfw.cpp
include/glad/: glad.c  glad.h
